Fix color contrast

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -50,7 +50,7 @@
       font-family: "Poppins", sans-serif;
       font-weight: medium;
       font-size: 21px;
-      background: #1891f6;
+      background: #014278;
       transition: 0.2s ease-in-out;
     }
 
@@ -133,7 +133,6 @@
     font-family: "Poppins", sans-serif;
     font-weight: medium;
     font-size: 18px;
-    background: #1891f6;
     transition: 0.2s ease-in-out;
   }
   .holder .hero-container .secondary_cta {
